--- a/Dream_Flights/Views/SignIn/Index.cshtml
+++ b/Dream_Flights/Views/SignIn/Index.cshtml
@@ -2,7 +2,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-
 <div class="row justify-content-center">
     <div class="col-md-4">
         <div class="card">
@@ -10,39 +9,86 @@
                 <h4 class="card-title mt-2">Sign up</h4>
             </header>
             <article class="card-body">
-                <form asp-controller="SignIn" asp-action="CreateUser" method="post" class="">
+
+                <!--<form asp-controller="" asp-action="" method="post" class="">-->
                     <div class="form-row">
                         <div class="col form-group">
                             <label>First name </label>
-                            <input type="text" class="form-control" placeholder="" name="first_name" required>
+                            <input type="text" class="form-control" placeholder="" name="first_name" id="first_name" required>
                         </div> <!-- form-group end.// -->
                         <div class="col form-group">
                             <label>Last name</label>
-                            <input type="text" class="form-control" placeholder="" name="last_name" required>
+                            <input type="text" class="form-control" placeholder="" name="last_name" id="last_name" required>
                         </div> <!-- form-group end.// -->
                     </div> <!-- form-row end.// -->
 
                     <div class="form-group">
                         <label>Email address</label>
-                        <input type="email" class="form-control" placeholder="" name="email" required>
+                        <input type="email" class="form-control" placeholder="" name="email" id="email" required>
                     </div> <!-- form-group end.// -->
 
                     <div class="form-row">
                         <div class="col form-group">
                             <label>Create password</label>
-                            <input class="form-control" type="password" name="pass1" required>
+                            <input class="form-control" type="password" name="pass1" id="pass1" required>
                         </div> <!-- form-group end.// -->
                         <div class="col form-group">
                             <label>Confirme password</label>
-                            <input class="form-control" type="password" name="pass2" required>
+                            <input class="form-control" type="password" name="pass2" id="pass2" required>
                         </div> <!-- form-group end.// -->
                     </div> <!-- form-row end.// -->
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success btn-block"> Register  </button>
+                        <button type="submit" class="btn btn-success btn-block" id="singin" onclick="SaveUser(first_name.value,last_name.value,email.value,pass1.value,pass2.value);"> Register  </button>
+  
                     </div> <!-- form-group// -->
-                </form>
+                <!--</form>-->
             </article> <!-- card-body end .// -->
             <div class="border-top card-body text-center">Have an account? <a href="/Login">Log In</a></div>
+
         </div> <!-- card.// -->
     </div> <!-- col.//-->
+<script  type="text/javascript">
+
+    function SaveUser(first_name,last_name,email,pass1,pass2) {    
+        debugger;
+        if(first_name != "" && last_name != "" && email != "" && pass1 != "" && pass2 != ""){
+            if(pass1 == pass2){
+                var api = new XMLHttpRequest();
+                api.open("GET", "/SignIn/CreateUser?first_name=" + first_name + "&last_name=" + last_name + "&pass1=" + pass1 + "&email=" + email);
+                api.send();
+                api.onreadystatechange = function() {
+                    debugger;
+                    if (this.status == 200 && this.readyState == 4) {
+                        $.notify("Account Created", "success");
+                        limpiarcampos();
+                    }else{
+                        if (this.status == 409){
+                            $.notify("Email Already In Use", "error");
+                        }
+                    }
+                }
+            }else{
+                 $.notify("Passwords do not match", "error");
+            }
+          
+        }else{
+            $.notify("complete all fields", "error");
+        }
+       
+     }
+
+     function limpiarcampos(){
+        $("#first_name").val("");
+        $("#last_name").val("");
+        $("#pass1").val("");
+        $("#pass2").val("");
+        $("#email").val("");
+
+     }
+</script>
+ </div>
+
+
+
+
